Fixes: Top in MainContent section, Cards

--- a/src/styles/common/common.sass
+++ b/src/styles/common/common.sass
@@ -9,8 +9,11 @@ html
   font-weight: bold
   //background-color: antiquewhite
 body
+  display: flex
+  flex-direction: column
+  justify-content: space-between
   margin: 0
-  max-height: 100vh
+  height: 100vh
   padding: 0
 
 .container
@@ -93,6 +96,7 @@ body
     overflow: hidden
     padding: 2% 4%
   &-Summary
+    //width: 68%
   &-Greeting
     font-size: 1.6875rem
     //font-weight: bold
@@ -119,6 +123,11 @@ body
     display: inline-block
     height: .8em
     width: .8em
+  &-Top
+    display: flex
+    flex-direction: column
+    justify-content: space-around
+    //width: 32%
 
 .Card
   background-color: $colorCardBackground
@@ -129,8 +138,8 @@ body
   min-height: 100px
   margin-bottom: 5%
   padding: 1rem
-  width: 32%
-  min-width: 14rem
+  //min-width: 14rem
+  min-width: 150px
   &-Pictogram
     //background: transparent url(./assets/icon_temperature.svg) no-repeat left bottom
     //height: 1.5rem
