--- a/src/main.sass
+++ b/src/main.sass
@@ -1,1 +1,5 @@
 @import "styles/common/common"
+@import "styles/cards/card"
+@import "styles/mainContent/mainContent"
+@import "styles/favoriteScenarios/favotiteScenarios"
+@import "styles/favoriteGadgets/favoriteGadgets"
