styles for screens less than 1000px

--- a/src/styles/cards/card.sass
+++ b/src/styles/cards/card.sass
@@ -9,8 +9,13 @@
   //height: 100px
   //margin-bottom: 5%
   padding: 10px
-  min-width: 175px
-  //width: 200px
+  width: calc(100vw / 6)
+  @media screen and (max-width: 1000px)
+    width: calc(100vw / 3)
+  @media screen and (max-width: 600px)
+    width: calc(100vw / 2)
+  @media screen and (max-width: 400px)
+    width: 70vw
   &:hover
     background: $colorCardHoveredBackground
     box-shadow: 0 2px 6px 0 rgba(197,186,186,0.50)
