--- a/src/styles/mainContent/mainContent.sass
+++ b/src/styles/mainContent/mainContent.sass
@@ -2,6 +2,7 @@
   //height: 52vh
   //padding-top: 3%
   //padding-bottom: 4%
+  overflow: hidden
   &-Title
     font-size: 1.125rem
   //height: 15%
@@ -16,6 +17,10 @@
     justify-content: space-between
     overflow: hidden
     padding: 2% 4%
+    @media screen and (max-width: 1000px)
+      flex-direction: column
+      max-width: 100vw
+      //justify-content: space-between
   &-Summary
   //width: 68%
   &-Greeting
@@ -52,5 +57,8 @@
     display: grid
     grid-template-columns: 1fr
     grid-gap: 1vw
-    max-height: 55vh
+    max-height: 48vh
     //grid-auto-flow: column
+    @media screen and (max-width: 1000px)
+      grid-auto-flow: column
+      margin-top: 2vmax
