--- a/src/styles/common/common.sass
+++ b/src/styles/common/common.sass
@@ -3,7 +3,15 @@ $colorTextMain: #333333
 $colorSectionBorder: #F0F0F0
 $colorCardBackground: #F7F7F7
 $colorCardHoveredBackground: #FFFFFF
+$colorCardFullScreenBackground: #FFFFFF
 $colorTagActiveBackground: #FFD93E
+$colorVariantBackground: #F2F1F0
+$colorVariantActiveBackground: #FFD93E
+$colorAirTemperatureGradient1: #068FFF
+$colorAirTemperatureGradient2: #FFD800
+$colorAirTemperatureGradient3: #F76B1C
+$colorGadgetLimits: #FFFFFF
+$colorGadgetFormButtonsActiveBackground: #FFD93E
 
 html
   color: $colorTextMain
