--- a/src/styles/common/common.sass
+++ b/src/styles/common/common.sass
@@ -12,6 +12,8 @@ $colorAirTemperatureGradient2: #FFD800
 $colorAirTemperatureGradient3: #F76B1C
 $colorGadgetLimits: #FFFFFF
 $colorGadgetFormButtonsActiveBackground: #FFD93E
+$colorGadgetCircleControlRay: #858585
+$colorGadgetCircleControlRayActive: #FFD93E
 
 html
   color: $colorTextMain
