more flex full-screen card air temperature

--- a/src/styles/cards/card.sass
+++ b/src/styles/cards/card.sass
@@ -86,7 +86,7 @@
   background: linear-gradient( to right, $colorAirTemperatureGradient1, $colorAirTemperatureGradient2, $colorAirTemperatureGradient3)
   border-radius: 30px
   box-sizing: border-box
-  display: inline-block
+  display: flex
   height: 60px
   overflow: hidden
   padding: 0 3.5%
@@ -100,14 +100,13 @@
     padding: 3.5% 0
     width: 65px
 .gadget-Limits
+  align-items: center
   display: flex
   color: $colorGadgetLimits
   font-size: 1.125rem
   justify-content: space-between
-  position: relative
   text-align: center
-  top: 50%
-  transform: translateY(-50%)
+  width: 100%
   @media screen and (max-width: 800px) and (orientation: portrait)
     box-sizing: border-box
     flex-direction: column-reverse
