--- a/src/styles/common/common.sass
+++ b/src/styles/common/common.sass
@@ -7,13 +7,15 @@ $colorCardFullScreenBackground: #FFFFFF
 $colorTagActiveBackground: #FFD93E
 $colorVariantBackground: #F2F1F0
 $colorVariantActiveBackground: #FFD93E
-$colorAirTemperatureGradient1: #068FFF
-$colorAirTemperatureGradient2: #FFD800
-$colorAirTemperatureGradient3: #F76B1C
+$colorGadgetAirTemperatureSliderGradient1: #068FFF
+$colorGadgetAirTemperatureSliderGradient2: #FFD800
+$colorGadgetAirTemperatureSliderGradient3: #F76B1C
 $colorGadgetLimits: #FFFFFF
 $colorGadgetFormButtonsActiveBackground: #FFD93E
 $colorGadgetCircleControlRay: #858585
 $colorGadgetCircleControlRayActive: #FFD93E
+$colorGadgetLightSliderGradient1: #FFE682
+$colorGadgetLightSliderGradient2: #FF9E00
 
 html
   color: $colorTextMain
