--- a/src/styles/favoriteScenarios/favoriteScenarios.sass
+++ b/src/styles/favoriteScenarios/favoriteScenarios.sass
@@ -14,8 +14,8 @@
     //grid-template-columns: repeat(auto-fit, minmax(1fr, 20vw) )
     grid-template-columns: 1fr 1fr 1fr
     //grid-template-rows: 1fr 1fr 1fr
-    overflow: hidden
-    padding: 2% 1%
+    //overflow: hidden
+    padding: 2% 0
   @media screen and (max-width: 1000px)
     overflow: hidden
     &-Content
