sliders horizontal movement

--- a/src/styles/favoriteGadgets/favoriteGadgets.sass
+++ b/src/styles/favoriteGadgets/favoriteGadgets.sass
@@ -38,6 +38,7 @@
     grid-auto-flow: column
     grid-gap: 1vw
     overflow: hidden
+    padding-bottom: 12px
   @media screen and (max-width: 1000px)
     &-TitleWrap
       justify-content: space-between
