linear slider (without change values)

--- a/src/styles/cards/card.sass
+++ b/src/styles/cards/card.sass
@@ -38,9 +38,11 @@
   align-items: center
   justify-content: center
   left: 0
-  position: absolute
+  overflow: hidden
+  position: fixed
   right: 0
   top: 0
+  z-index: 30
 .gadgetWrap
   max-width: 55%
   @media screen and (max-width: 800px) and (orientation: portrait)
